<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    android:elevation="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/list_item_databaseID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_id"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/list_item_patientID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_id"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/list_item_recordingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_date"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>